--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ pandas = "^1.4.1"
 scikit-learn = "^1.0.2"
 numpy = "^1.22.2"
 pytest = "^7.0.1"
-pytest-cov = "^3.0.0"
+pytest-cov
 
 [tool.poetry.dev-dependencies]
 [tool.semantic_release]
