--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ pandas = "^1.4.1"
 scikit-learn = "^1.0.2"
 numpy = "^1.22.2"
 pytest = "^7.0.1"
+pytest-cov = "*"
+statsmodels = "^0.13.2"
 
 [tool.poetry.dev-dependencies]
 [tool.semantic_release]
